--- a/tests/test-pokertable.py.in
+++ b/tests/test-pokertable.py.in
@@ -20,12 +20,11 @@
 # along with this program in a file in the toplevel directory called
 # "AGPLv3".  If not, see <http://www.gnu.org/licenses/>.
 #
-import sys, os
+import sys
 sys.path.insert(0, "@srcdir@/..")
 sys.path.insert(0, "..")
 
 import libxml2
-from pprint import pprint
 from string import split
 import time
 
