partly fixed test-currencyclient. the overall quality of this test is too bad to continue now

--- a/tests/test-currencyclient.py.in
+++ b/tests/test-currencyclient.py.in
@@ -45,9 +45,13 @@ twisted.internet.base.DelayedCall.debug = True
 
 from urlparse import urlparse
 
-from tests.testmessages import silence_all_messages, clear_all_messages, search_output, get_messages, restore_all_messages
-verbose = int(os.environ.get('VERBOSE_T', '-1'))
-if verbose < 0: silence_all_messages()
+from tests.testmessages import search_output, clear_all_messages, get_messages
+import logging
+from tests.testmessages import TestLoggingHandler
+logger = logging.getLogger()
+handler = TestLoggingHandler()
+logger.addHandler(handler)
+logger.setLevel(10)
 
 from pokernetwork import currencyclient
 
@@ -496,7 +500,7 @@ class FakeCurrencyClientTestCase(CurrencyClientTestCase):
         clear_all_messages()
         d = CurrencyClientTestCase.test07_breakNote(self)
         def checkOutput(result):
-            self.assertEquals(search_output("breakNote vaues"), True)
+            self.assertEquals(search_output("breakNote values"), True)
             return True
 
         d.addCallback(checkOutput)
