--- a/tests/test-pokerbot.py.in
+++ b/tests/test-pokerbot.py.in
@@ -25,9 +25,13 @@ sys.path.insert(0, "..")
 
 from twisted.trial import unittest, runner, reporter
 
-from tests.testmessages import silence_all_messages
-verbose = int(os.environ.get('VERBOSE_T', '-1'))
-if verbose < 0: silence_all_messages()
+from tests.testmessages import search_output, clear_all_messages, get_messages
+import logging
+from tests.testmessages import TestLoggingHandler
+logger = logging.getLogger()
+handler = TestLoggingHandler()
+logger.addHandler(handler)
+logger.setLevel(10)
 
 import tempfile
 from pokernetwork import pokerbot
